# FocusRead

./: .gitignore  README.md
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 2026-04-06_0002_create_users_table.py  2026-04-06_0003_create_accounts_table.py  2026-04-06_0004_create_sessions_table.py  2026-04-06_0005_create_jwt_signing_keys_table.py  2026-04-06_0006_create_roles_and_user_roles_tables.py  2026-04-06_0007_create_books_table.py  2026-04-08_0008_create_book_chunks_table.py  2026-04-09_0009_create_reading_sessions_table.py  2026-04-09_0010_create_reading_stats_table.py  2026-04-09_0011_create_user_book_state_table.py  2026-04-10_0012_create_contributors_tables.py  2026-04-11_0013_create_shelves_tables.py  2026-04-11_0014_create_labels_tables.py  2026-04-11_0015_create_book_toc_entries.py  2026-04-11_0016_create_bookmarks.py  2026-04-11_0017_seed_system_labels.py  2026-04-12_0018_create_themes_tables.py  2026-04-12_0019_seed_default_themes.py  2026-04-13_0020_create_book_assets_table.py  2026-04-13_0021_refactor_books_table_for_catalog_books.py  2026-04-13_0022_create_marketplace_listings_table.py  2026-04-13_0023_create_library_items_table.py  2026-04-13_0024_refactor_book_chunks_to_book_assets.py  2026-04-13_0025_refactor_book_toc_entries_to_book_assets.py  2026-04-13_0026_refactor_bookmarks_to_library_items.py  2026-04-13_0027_refactor_reading_sessions_to_library_items.py  2026-04-13_0028_refactor_reading_stats_to_library_items.py  2026-04-13_0029_refactor_shelf_books_to_shelf_items.py  2026-04-13_0030_replace_labels_with_library_labels.py  2026-04-13_0031_drop_user_book_state_table.py  2026-04-17_0032_partial_unique_indexes_and_moderation_queue.py
apps/api/app/: README.md  __init__.py  main.py  types.py
apps/api/app/application/: README.md  __init__.py
apps/api/app/application/admin/: __init__.py  _helpers.py  assign_user_roles.py  create_system_label.py  delete_system_label.py  get_platform_stats.py  get_user_books.py  get_user_detail.py  impersonate_user.py  list_system_labels.py  list_users.py  remove_user_roles.py  update_system_label.py
apps/api/app/application/auth/: get_current_user.py  get_current_user_profile.py  login.py  logout.py  oauth_callback.py  refresh_token.py  register.py  scopes.py
apps/api/app/application/books/: __init__.py
apps/api/app/application/common/: README.md  __init__.py  errors.py  unit_of_work.py
apps/api/app/application/contributors/: __init__.py
apps/api/app/application/labels/: __init__.py
apps/api/app/application/reading/: __init__.py
apps/api/app/application/shelves/: __init__.py
apps/api/app/application/themes/: __init__.py
apps/api/app/application/user_book_state/: __init__.py
apps/api/app/config/: __init__.py  db.py  dependencies.py  exception_handlers.py  logger.py  settings.py
apps/api/app/core/: __init__.py  bootstrap.py  domain_models.py  main.py  middlewares.py  routers.py
apps/api/app/domain/: README.md  __init__.py
apps/api/app/domain/account/: entities.py
apps/api/app/domain/auth/: errors.py  repositories.py  value_objects.py
apps/api/app/domain/book_asset/: entities.py  errors.py  repositories.py  value_objects.py
apps/api/app/domain/book_chunks/: __init__.py  entities.py  errors.py  repositories.py  value_objects.py
apps/api/app/domain/book_toc_entry/: __init__.py  entities.py  repositories.py  value_objects.py
apps/api/app/domain/bookmark/: __init__.py  entities.py  repositories.py  value_objects.py
apps/api/app/domain/books/: __init__.py  entities.py  errors.py  filter.py  repositories.py  value_objects.py
apps/api/app/domain/contributor/: __init__.py  entities.py  repositories.py  (+1 more)
apps/api/app/infrastructure/: README.md  __init__.py  bootstrap.py
apps/api/app/middleware/: __init__.py  rate_limiter.py
apps/api/app/presentation/: README.md  __init__.py
apps/api/app/shared/: __init__.py
apps/api/app/workers/: README.md  broker.py  pdf_processor.py  scheduler.py  task.py  tokenizer.py
apps/api/tests/: README.md
apps/api/tests/workers/: test_task.py  test_tokenizer.py
(+358 files in other folders)
