[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "focusread-api"
version = "0.1.0"
description = "FastAPI backend for FocusRead"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi[standard]>=0.135.3",
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.30.0",
    "alembic>=1.16.5",
    "pydantic-settings>=2.11.0",
    "loguru>=0.7.3",
    "redis[hiredis]>=6.2.0",
    "slowapi>=0.1.9",
    "pyjwt[crypto]>=2.10.0",
    "pwdlib[argon2]>=0.2.0",
    "authlib>=1.5.0",
    "httpx>=0.28.0",
    "PyMuPDF>=1.27.0",
    "sse-starlette>=3.3.0",
    "orjson>=3.11.8",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "alembic/versions",
]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "TCH"]
ignore = [
    "B008",
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["app", "tests", "alembic"]
exclude = [
    ".venv",
    "**/__pycache__",
    "build",
    "dist",
]
